--- a/hms-api/package.json
+++ b/hms-api/package.json
@@ -16,9 +16,9 @@
     "eslint": "8.20.0",
     "eslint-config-google": "0.14.0",
     "jest": "27.5.1",
+    "serverless-dynamodb-local": "0.2.40",
     "serverless-offline": "8.8.1",
     "serverless-plugin-typescript": "2.1.2",
-    "serverless-dynamodb-local": "^0.2.40",
     "ts-jest": "27.1.4",
     "ts-node": "10.9.1",
     "typescript": "4.7.4",
@@ -26,6 +26,7 @@
   },
   "dependencies": {
     "@aws-sdk/client-dynamodb": "3.131.0",
+    "jsonwebtoken": "8.5.1",
     "serverless-dynamodb-client": "0.0.2"
   }
 }
