--- a/hms-api/serverless.yml
+++ b/hms-api/serverless.yml
@@ -38,7 +38,7 @@ provider:
   runtime: nodejs14.x
   region: eu-central-1
   environment:
-    AUTHORIZER_TYPE: ALWAYS_PASS
+    AUTHORIZER_TYPE: ACTIVE_DIRECTORY
     AZURE_AD_CLIENT_ID: ${file(./secrets.json):AZURE_AD_CLIENT_ID}
     AZURE_AD_CLIENT_PUBLIC_KEY: ${file(./public_key)}
     HACKATHON_TABLE: hackathon
@@ -141,7 +141,7 @@ functions:
     handler: src/handler/idea/list.list
     events:
       - http:
-          path: hackathon/{hackathonId}/ideas
+          path: hackathon/{id}/ideas
           method: get
           cors: true
           authorizer: authorize
@@ -165,8 +165,8 @@ functions:
     handler: src/handler/idea/join.join
     events:
       - http:
-          # TODO this should be done using a userId from the token
-          path: idea/{ideaId}/join/{participantId}
+#           TODO this should be done using a userId from the token
+          path: idea/{id}/join/{participantId}
           method: put
           cors: true
           authorizer: authorize
@@ -174,8 +174,8 @@ functions:
     handler: src/handler/idea/leave.leave
     events:
       - http:
-          # TODO this should be done using a userId from the token
-          path: idea/{ideaId}/leave/{participantId}
+#           TODO this should be done using a userId from the token
+          path: idea/{id}/leave/{participantId}
           method: put
           cors: true
           authorizer: authorize
@@ -241,7 +241,7 @@ functions:
     handler: src/handler/participant/list.list
     events:
       - http:
-          path: hackathon/{hackathonId}/participants
+          path: hackathon/{id}/participants
           method: get
           cors: true
           authorizer: authorize
@@ -282,7 +282,7 @@ functions:
     handler: src/handler/category/list.list
     events:
       - http:
-          path: hackathon/{hackathonId}/categories
+          path: hackathon/{id}/categories
           method: get
           cors: true
           authorizer: authorize
