fix formatting by adding prettier

--- a/hms-api/.eslintrc.json
+++ b/hms-api/.eslintrc.json
@@ -4,7 +4,9 @@
         "es2021": true
     },
     "extends": [
-        "google"
+        "eslint:recommended",
+        "plugin:@typescript-eslint/recommended",
+        "prettier"
     ],
     "parser": "@typescript-eslint/parser",
     "parserOptions": {
@@ -12,8 +14,11 @@
         "sourceType": "module"
     },
     "plugins": [
-        "@typescript-eslint"
+        "@typescript-eslint",
+        "prettier"
     ],
     "rules": {
+        "quotes": ["error", "single"],
+        "no-duplicate-imports": "error"
     }
 }
