Move backend infrastructure to cdk (#499)
* added backend tables to cdk stack (not tested)

* fix cloud formation path name error

* Update README.md

* changed path param on tests

--- a/hms-api/serverless.yml
+++ b/hms-api/serverless.yml
@@ -38,7 +38,7 @@ provider:
   runtime: nodejs14.x
   region: eu-central-1
   environment:
-    AUTHORIZER_TYPE: ALWAYS_PASS
+    AUTHORIZER_TYPE: ACTIVE_DIRECTORY
     AZURE_AD_CLIENT_ID: ${file(./secrets.json):AZURE_AD_CLIENT_ID}
     AZURE_AD_CLIENT_PUBLIC_KEY: ${file(./public_key)}
     HACKATHON_TABLE: hackathon
@@ -141,7 +141,7 @@ functions:
     handler: src/handler/idea/list.list
     events:
       - http:
-          path: hackathon/{hackathonId}/ideas
+          path: hackathon/{id}/ideas
           method: get
           cors: true
           authorizer: authorize
@@ -165,8 +165,8 @@ functions:
     handler: src/handler/idea/join.join
     events:
       - http:
-          # TODO this should be done using a userId from the token
-          path: idea/{ideaId}/join/{participantId}
+#           TODO this should be done using a userId from the token
+          path: idea/{id}/join/{participantId}
           method: put
           cors: true
           authorizer: authorize
@@ -174,8 +174,8 @@ functions:
     handler: src/handler/idea/leave.leave
     events:
       - http:
-          # TODO this should be done using a userId from the token
-          path: idea/{ideaId}/leave/{participantId}
+#           TODO this should be done using a userId from the token
+          path: idea/{id}/leave/{participantId}
           method: put
           cors: true
           authorizer: authorize
@@ -241,7 +241,7 @@ functions:
     handler: src/handler/participant/list.list
     events:
       - http:
-          path: hackathon/{hackathonId}/participants
+          path: hackathon/{id}/participants
           method: get
           cors: true
           authorizer: authorize
@@ -282,7 +282,7 @@ functions:
     handler: src/handler/category/list.list
     events:
       - http:
-          path: hackathon/{hackathonId}/categories
+          path: hackathon/{id}/categories
           method: get
           cors: true
           authorizer: authorize
@@ -343,157 +343,3 @@ functions:
           method: delete
           cors: true
           authorizer: authorize
-
-resources:
-  Resources:
-    hackathonTable:
-      Type: AWS::DynamoDB::Table
-      DeletionPolicy: Retain
-      Properties:
-        TableName: ${self:provider.environment.HACKATHON_TABLE}
-        BillingMode: PAY_PER_REQUEST
-        AttributeDefinitions:
-          - AttributeName: id
-            AttributeType: S
-        KeySchema:
-          - AttributeName: id
-            KeyType: HASH
-
-    userTable:
-      Type: AWS::DynamoDB::Table
-      DeletionPolicy: Retain
-      Properties:
-        TableName: ${self:provider.environment.USER_TABLE}
-        BillingMode: PAY_PER_REQUEST
-        AttributeDefinitions:
-          - AttributeName: id
-            AttributeType: S
-          - AttributeName: emailAddress
-            AttributeType: S
-        KeySchema:
-          - AttributeName: id
-            KeyType: HASH
-        GlobalSecondaryIndexes:
-          - IndexName: ${self:provider.environment.USER_BY_EMAIL_ADDRESS_INDEX}
-            KeySchema:
-              - AttributeName: emailAddress
-                KeyType: HASH
-              - AttributeName: id
-                KeyType: RANGE
-            Projection:
-              ProjectionType: ALL
-
-    skillTable:
-      Type: AWS::DynamoDB::Table
-      DeletionPolicy: Retain
-      Properties:
-        TableName: ${self:provider.environment.SKILL_TABLE}
-        BillingMode: PAY_PER_REQUEST
-        AttributeDefinitions:
-          - AttributeName: id
-            AttributeType: S
-        KeySchema:
-          - AttributeName: id
-            KeyType: HASH
-
-    categoryTable:
-      Type: AWS::DynamoDB::Table
-      DeletionPolicy: Retain
-      Properties:
-        TableName: ${self:provider.environment.CATEGORY_TABLE}
-        BillingMode: PAY_PER_REQUEST
-        AttributeDefinitions:
-          - AttributeName: id
-            AttributeType: S
-          - AttributeName: hackathonId
-            AttributeType: S
-        KeySchema:
-          - AttributeName: id
-            KeyType: HASH
-        GlobalSecondaryIndexes:
-          - IndexName: ${self:provider.environment.CATEGORY_BY_HACKATHON_ID_INDEX}
-            KeySchema:
-              - AttributeName: hackathonId
-                KeyType: HASH
-              - AttributeName: id
-                KeyType: RANGE
-            Projection:
-              ProjectionType: ALL
-
-    ideaTable:
-      Type: AWS::DynamoDB::Table
-      DeletionPolicy: Retain
-      Properties:
-        TableName: ${self:provider.environment.IDEA_TABLE}
-        BillingMode: PAY_PER_REQUEST
-        AttributeDefinitions:
-          - AttributeName: id
-            AttributeType: S
-          - AttributeName: hackathonId
-            AttributeType: S
-          - AttributeName: categoryId
-            AttributeType: S
-          - AttributeName: ownerId
-            AttributeType: S
-        KeySchema:
-          - AttributeName: id
-            KeyType: HASH
-        GlobalSecondaryIndexes:
-          - IndexName: ${self:provider.environment.IDEA_BY_HACKATHON_ID_INDEX}
-            KeySchema:
-              - AttributeName: hackathonId
-                KeyType: HASH
-              - AttributeName: id
-                KeyType: RANGE
-            Projection:
-              ProjectionType: ALL
-          - IndexName: ${self:provider.environment.IDEA_BY_CATEGORY_ID_INDEX}
-            KeySchema:
-              - AttributeName: categoryId
-                KeyType: HASH
-              - AttributeName: id
-                KeyType: RANGE
-            Projection:
-              ProjectionType: ALL
-          - IndexName: ${self:provider.environment.IDEA_BY_OWNER_ID_INDEX}
-            KeySchema:
-              - AttributeName: ownerId
-                KeyType: HASH
-              - AttributeName: id
-                KeyType: RANGE
-            Projection:
-              ProjectionType: ALL
-
-    participantTable:
-      Type: AWS::DynamoDB::Table
-      DeletionPolicy: Retain
-      Properties:
-        TableName: ${self:provider.environment.PARTICIPANT_TABLE}
-        BillingMode: PAY_PER_REQUEST
-        AttributeDefinitions:
-          - AttributeName: id
-            AttributeType: S
-          - AttributeName: hackathonId
-            AttributeType: S
-          - AttributeName: userId
-            AttributeType: S
-        KeySchema:
-          - AttributeName: id
-            KeyType: HASH
-        GlobalSecondaryIndexes:
-          - IndexName: ${self:provider.environment.PARTICIPANT_BY_HACKATHON_ID_INDEX}
-            KeySchema:
-              - AttributeName: hackathonId
-                KeyType: HASH
-              - AttributeName: id
-                KeyType: RANGE
-            Projection:
-              ProjectionType: ALL
-          - IndexName: ${self:provider.environment.PARTICIPANT_BY_HACKATHON_ID_USER_ID_INDEX}
-            KeySchema:
-              - AttributeName: hackathonId
-                KeyType: HASH
-              - AttributeName: userId
-                KeyType: RANGE
-            Projection:
-              ProjectionType: ALL
