--- a/hms-app/package.json
+++ b/hms-app/package.json
@@ -26,6 +26,7 @@
     "nuka-carousel": "^5.1.3",
     "react": "^17.0.2",
     "react-beautiful-dnd": "^13.1.0",
+    "react-countdown": "^2.3.2",
     "react-dom": "^17.0.2",
     "react-redux": "^8.0.2",
     "react-router-dom": "^6.2.2",
