--- a/hms-app/.env-example
+++ b/hms-app/.env-example
@@ -1,7 +1,9 @@
-REACT_APP_CORE_URL=
-PORT=
-REACT_APP_AZURE_CLIENT_ID=
-REACT_APP_AZURE_ACCOUNT_ID=
-REACT_APP_AZURE_AUTHORITY=
-REACT_APP_AZURE_REDIRECT_URL=
-REACT_APP_USE_AZURE_AUTH=
+REACT_APP_CORE_URL=%%REACT_APP_CORE_URL%%
+--REACT_APP_CORE_URL=http://localhost:3000/local
+PORT=3001
+REACT_APP_AZURE_CLIENT_ID=%%REACT_APP_AZURE_CLIENT_ID%%
+REACT_APP_AZURE_ACCOUNT_ID=%%REACT_APP_AZURE_ACCOUNT_ID%%
+REACT_APP_AZURE_AUTHORITY=%%REACT_APP_AZURE_AUTHORITY%%
+REACT_APP_AZURE_REDIRECT_URL=%%REACT_APP_AZURE_REDIRECT_URL%%
+--REACT_APP_AZURE_REDIRECT_URL=http://localhost:3001
+REACT_APP_USE_AZURE_AUTH=true
