--- a/hms-api/serverless.local.yml
+++ b/hms-api/serverless.local.yml
@@ -56,6 +56,7 @@ provider:
     PARTICIPANT_BY_HACKATHON_ID_INDEX: participant-by-hackathonId
     PARTICIPANT_BY_HACKATHON_ID_USER_ID_INDEX: participant-by-hackathonId-userId
     ADMIN_USERS: ${file(./secrets.json):ADMIN_USERS}
+    HMS_BUCKET_NAME: ${file(./secrets.json):HMS_BUCKET_NAME}
   iam:
     role:
       statements:
@@ -78,10 +79,27 @@ provider:
             - arn:aws:dynamodb:${opt:region, self:provider.region}:*:table/${self:provider.environment.IDEA_TABLE}/index/*
             - arn:aws:dynamodb:${opt:region, self:provider.region}:*:table/${self:provider.environment.PARTICIPANT_TABLE}
             - arn:aws:dynamodb:${opt:region, self:provider.region}:*:table/${self:provider.environment.PARTICIPANT_TABLE}/index/*
+        - Effect: Allow
+          Action:
+            - s3:GetObject
+            - s3:PutObject
+            - s3:DeleteObject
+            - s3:ListBucket
+          Resource:
+            - arn:aws:s3:::${self:provider.environment.HMS_BUCKET_NAME}/*
 
 functions:
   authorize:
     handler: src/handler/authorize.authorize
+  createFinalVideo:
+    handler: src/handler/idea/create-final-video.createFinalVideo
+    events:
+      - http:
+          path: /idea/{ideaId}/final-video
+          method: POST
+          cors: true
+          # TODO: add authentication
+          #authorizer: authorize
   createHackathon:
     handler: src/handler/hackathon/create.create
     events:
