--- a/hms-api/serverless.local.yml
+++ b/hms-api/serverless.local.yml
@@ -56,6 +56,7 @@ provider:
     PARTICIPANT_BY_HACKATHON_ID_INDEX: participant-by-hackathonId
     PARTICIPANT_BY_HACKATHON_ID_USER_ID_INDEX: participant-by-hackathonId-userId
     ADMIN_USERS: ${file(./secrets.json):ADMIN_USERS}
+    HMS_BUCKET_NAME: ${file(./secrets.json):HMS_BUCKET_NAME}
   iam:
     role:
       statements:
@@ -78,6 +79,12 @@ provider:
             - arn:aws:dynamodb:${opt:region, self:provider.region}:*:table/${self:provider.environment.IDEA_TABLE}/index/*
             - arn:aws:dynamodb:${opt:region, self:provider.region}:*:table/${self:provider.environment.PARTICIPANT_TABLE}
             - arn:aws:dynamodb:${opt:region, self:provider.region}:*:table/${self:provider.environment.PARTICIPANT_TABLE}/index/*
+        - Effect: Allow
+          Action:
+            - s3:GetObject
+            - s3:PutObject
+          Resource:
+            - arn:aws:s3:::${self:provider.environment.HMS_BUCKET_NAME}/*
 
 functions:
   authorize:
@@ -179,6 +186,22 @@ functions:
 #           TODO this should be done using a userId from the token
           path: idea/{id}/leave/{participantId}
           method: put
+          cors: true
+          authorizer: authorize
+  getUploadUrl:
+    handler: src/handler/idea/get-presigned-url.getUploadUrl
+    events:
+      - http:
+          path: /idea/{id}/upload-url
+          method: GET
+          cors: true
+          authorizer: authorize
+  getDownloadUrl:
+    handler: src/handler/idea/get-presigned-url.getDownloadUrl
+    events:
+      - http:
+          path: /idea/{id}/download-url
+          method: GET
           cors: true
           authorizer: authorize
 
