--- a/hms-app/package.json
+++ b/hms-app/package.json
@@ -5,12 +5,13 @@
   "dependencies": {
     "@azure/msal-browser": "^2.28.0",
     "@azure/msal-react": "^1.4.5",
-    "@mantine/core": "^4.2.11",
-    "@mantine/dates": "^4.2.12",
-    "@mantine/form": "^5.0.3",
-    "@mantine/hooks": "^4.2.11",
-    "@mantine/notifications": "^4.2.12",
-    "@mantine/rte": "^4.2.11",
+    "@mantine/core": "^5.2.3",
+    "@mantine/dates": "^5.2.3",
+    "@mantine/dropzone": "^5.2.3",
+    "@mantine/form": "^5.2.3",
+    "@mantine/hooks": "^5.2.3",
+    "@mantine/notifications": "^5.2.3",
+    "@mantine/rte": "^5.2.3",
     "@microsoft/microsoft-graph-types": "^2.22.0",
     "@reduxjs/toolkit": "^1.8.2",
     "@testing-library/jest-dom": "^5.16.5",
@@ -27,6 +28,7 @@
     "react-beautiful-dnd": "^13.1.0",
     "react-countdown": "^2.3.2",
     "react-dom": "^17.0.2",
+    "react-player": "^2.10.1",
     "react-redux": "^8.0.2",
     "react-router-dom": "^6.2.2",
     "react-scripts": "5.0.1",
