--- a/.github/workflows/auto-merge-dependabot.yml
+++ b/.github/workflows/auto-merge-dependabot.yml
@@ -2,7 +2,6 @@ name: Auto Merge Dependabot PRs
 on: pull_request
 
 permissions:
-  contents: write
   pull-requests: write
 
 jobs:
@@ -12,12 +11,12 @@ jobs:
     steps:
       - name: Dependabot metadata
         id: metadata
-        uses: dependabot/fetch-metadata@v1
+        uses: dependabot/fetch-metadata@v1.1.1
         with:
-          github-token: ${{ secrets.dependabot_auto_merge_token }}
+          github-token: "${{ secrets.GITHUB_TOKEN }}"
       - name: Enable auto-merge for Dependabot PRs
         if: ${{ steps.metadata.outputs.update-type == 'version-update:semver-minor' }}
         run: gh pr merge --auto --merge "$PR_URL"
         env:
           PR_URL: ${{ github.event.pull_request.html_url }}
-          GITHUB_TOKEN: ${{ secrets.dependabot_auto_merge_token }}
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
