--- a/.github/workflows/auto-merge-dependabot.yml
+++ b/.github/workflows/auto-merge-dependabot.yml
@@ -1,11 +1,14 @@
 name: Auto Merge Dependabot PRs
 on: pull_request
 
+permissions:
+  contents: write
+  pull-requests: write
+
 jobs:
   auto-merge:
     runs-on: ubuntu-latest
     if: ${{ github.actor == 'dependabot[bot]' }}
-    permissions: write-all
     steps:
       - name: Dependabot metadata
         id: metadata
