--- a/.github/workflows/backend-tests.yml
+++ b/.github/workflows/backend-tests.yml
@@ -2,6 +2,11 @@ name: Backend (HMS API) Tests
 
 on: pull_request
 
+defaults:
+  run:
+    shell: bash
+    working-directory: hms-api
+
 jobs:
   test:
     runs-on: ubuntu-latest
@@ -11,7 +16,5 @@ jobs:
         uses: actions/setup-node@v3
         with:
           node-version: '16.x'
-      - run: npm ci
-        working-directory: hms-api
+      - run: npm install
       - run: npm test
-        working-directory: hms-api
