--- a/hms-api/package.json
+++ b/hms-api/package.json
@@ -15,10 +15,10 @@
     "@typescript-eslint/parser": "5.41.0",
     "eslint": "8.26.0",
     "eslint-config-google": "0.14.0",
-    "eslint-config-prettier": "^8.5.0",
-    "eslint-plugin-prettier": "^4.2.1",
+    "eslint-config-prettier": "8.5.0",
+    "eslint-plugin-prettier": "4.2.1",
     "jest": "27.5.1",
-    "prettier": "^2.6.0",
+    "prettier": "2.6.0",
     "serverless-dynamodb-local": "0.2.40",
     "serverless-offline": "8.8.1",
     "serverless-plugin-typescript": "2.1.4",
@@ -29,8 +29,8 @@
   },
   "dependencies": {
     "@aws-sdk/client-dynamodb": "3.198.0",
-    "@aws-sdk/client-s3": "^3.198.0",
-    "@aws-sdk/s3-request-presigner": "^3.198.0",
+    "@aws-sdk/client-s3": "3.198.0",
+    "@aws-sdk/s3-request-presigner": "3.198.0",
     "jsonwebtoken": "8.5.1",
     "serverless-dynamodb-client": "0.0.2"
   }
