added the voting from other branch
added the voting system that tino implemented in a different branch

--- a/hms-api/serverless.local.yml
+++ b/hms-api/serverless.local.yml
@@ -188,6 +188,24 @@ functions:
           method: put
           cors: true
           authorizer: authorize
+  voteForIdea:
+    handler: src/handler/idea/vote.vote
+    events:
+      - http:
+#           TODO this should be done using a userId from the token
+          path: idea/{id}/votes/{participantId}
+          method: put
+          cors: true
+          authorizer: authorize
+    revokeVoteForIdea:
+      handler: src/handler/idea/revokeVote.revokeVote
+      events:
+        - http:
+#           TODO this should be done using a userId from the token
+            path: idea/{id}/votes/{participantId}
+            method: delete
+            cors: true
+            authorizer: authorize
   getUploadUrl:
     handler: src/handler/idea/get-presigned-url.getUploadUrl
     events:
@@ -204,7 +222,6 @@ functions:
           method: GET
           cors: true
           authorizer: authorize
-
   createUser:
     handler: src/handler/user/create.create
     events:
