adjusted endpoints voting endpoints

--- a/hms-api/serverless.local.yml
+++ b/hms-api/serverless.local.yml
@@ -193,19 +193,19 @@ functions:
     events:
       - http:
 #           TODO this should be done using a userId from the token
-          path: idea/{id}/votes/{participantId}
+          path: idea/{id}/addVote/{participantId}
           method: put
           cors: true
           authorizer: authorize
-    revokeVoteForIdea:
-      handler: src/handler/idea/revokeVote.revokeVote
-      events:
-        - http:
+  revokeVoteForIdea:
+    handler: src/handler/idea/revokeVote.revokeVote
+    events:
+      - http:
 #           TODO this should be done using a userId from the token
-            path: idea/{id}/votes/{participantId}
-            method: delete
-            cors: true
-            authorizer: authorize
+          path: idea/{id}/removeVote/{participantId}
+          method: put
+          cors: true
+          authorizer: authorize
   getUploadUrl:
     handler: src/handler/idea/get-presigned-url.getUploadUrl
     events:
@@ -222,6 +222,7 @@ functions:
           method: GET
           cors: true
           authorizer: authorize
+
   createUser:
     handler: src/handler/user/create.create
     events:
