--- a/hms-api/serverless.local.yml
+++ b/hms-api/serverless.local.yml
@@ -188,6 +188,24 @@ functions:
           method: put
           cors: true
           authorizer: authorize
+  voteForIdea:
+    handler: src/handler/idea/vote.vote
+    events:
+      - http:
+#           TODO this should be done using a userId from the token
+          path: idea/{id}/addVote/{participantId}
+          method: put
+          cors: true
+          authorizer: authorize
+  revokeVoteForIdea:
+    handler: src/handler/idea/revokeVote.revokeVote
+    events:
+      - http:
+#           TODO this should be done using a userId from the token
+          path: idea/{id}/removeVote/{participantId}
+          method: put
+          cors: true
+          authorizer: authorize
   getUploadUrl:
     handler: src/handler/idea/get-presigned-url.getUploadUrl
     events:
