renamed replyTo and changed comment to ideaComment

--- a/hms-api/serverless.yml
+++ b/hms-api/serverless.yml
@@ -32,7 +32,7 @@ custom:
             rawsources: [./dev/init/user-seed.json]
           - table: skill
             rawsources: [./dev/init/skill-seed.json]
-          - table: idea_comment
+          - table: ideaComment
             rawsources: [./dev/init/ideaComment-seed.json]
 
 provider:
@@ -57,8 +57,8 @@ provider:
     PARTICIPANT_TABLE: participant
     PARTICIPANT_BY_HACKATHON_ID_INDEX: participant-by-hackathonId
     PARTICIPANT_BY_HACKATHON_ID_USER_ID_INDEX: participant-by-hackathonId-userId
-    COMMENT_TABLE: idea_comment
-    COMMENT_BY_IDEA_ID_INDEX: idea_comment-by-ideaId
+    IDEA_COMMENT_TABLE: ideaComment
+    IDEA_COMMENT_BY_IDEA_ID_INDEX: ideaComment-by-ideaId
     ADMIN_USERS: ${file(./secrets.json):ADMIN_USERS}
   iam:
     role:
@@ -82,8 +82,8 @@ provider:
             - arn:aws:dynamodb:${opt:region, self:provider.region}:*:table/${self:provider.environment.IDEA_TABLE}/index/*
             - arn:aws:dynamodb:${opt:region, self:provider.region}:*:table/${self:provider.environment.PARTICIPANT_TABLE}
             - arn:aws:dynamodb:${opt:region, self:provider.region}:*:table/${self:provider.environment.PARTICIPANT_TABLE}/index/*
-            - arn:aws:dynamodb:${opt:region, self:provider.region}:*:table/${self:provider.environment.COMMENT_TABLE}
-            - arn:aws:dynamodb:${opt:region, self:provider.region}:*:table/${self:provider.environment.COMMENT_TABLE}/index/*
+            - arn:aws:dynamodb:${opt:region, self:provider.region}:*:table/${self:provider.environment.IDEA_COMMENT_TABLE}
+            - arn:aws:dynamodb:${opt:region, self:provider.region}:*:table/${self:provider.environment.IDEA_COMMENT_TABLE}/index/*
 
 functions:
   authorize:
@@ -297,34 +297,34 @@ functions:
           authorizer: authorize
 
   listIdeaCommentsForIdea:
-    handler: src/handler/comment/list.list
+    handler: src/handler/ideaComment/list.list
     events:
       - http:
-          path: idea/{id}/comments
+          path: idea/{id}/ideaComments
           method: get
           cors: true
           authorizer: authorize
   createIdeaComment:
-    handler: src/handler/comment/create.create
+    handler: src/handler/ideaComment/create.create
     events:
       - http:
-          path: idea/{id}/comment
+          path: idea/{id}/ideaComment
           method: post
           cors: true
           authorizer: authorize
   deleteIdeaComment:
-    handler: src/handler/comment/remove.remove
+    handler: src/handler/ideaComment/remove.remove
     events:
       - http:
-          path: idea/comment/{id}
+          path: idea/ideaComment/{id}
           method: delete
           cors: true
           authorizer: authorize
   editIdeaComment:
-    handler: src/handler/comment/edit.edit
+    handler: src/handler/ideaComment/edit.edit
     events:
       - http:
-          path: idea/comment/{id}
+          path: idea/ideaComment/{id}
           method: put
           cors: true
           authorizer: authorize
