--- a/hms-api/serverless.local.yml
+++ b/hms-api/serverless.local.yml
@@ -320,34 +320,34 @@ functions:
           authorizer: authorize
 
   listIdeaCommentsForIdea:
-    handler: src/handler/comment/list.list
+    handler: src/handler/ideaComment/list.list
     events:
       - http:
-          path: idea/{id}/comments
+          path: idea/{id}/ideaComments
           method: get
           cors: true
           authorizer: authorize
   createIdeaComment:
-    handler: src/handler/comment/create.create
+    handler: src/handler/ideaComment/create.create
     events:
       - http:
-          path: idea/{id}/comment
+          path: idea/{id}/ideaComment
           method: post
           cors: true
           authorizer: authorize
   deleteIdeaComment:
-    handler: src/handler/comment/remove.remove
+    handler: src/handler/ideaComment/remove.remove
     events:
       - http:
-          path: idea/comment/{id}
+          path: idea/ideaComment/{id}
           method: delete
           cors: true
           authorizer: authorize
   editIdeaComment:
-    handler: src/handler/comment/edit.edit
+    handler: src/handler/ideaComment/edit.edit
     events:
       - http:
-          path: idea/comment/{id}
+          path: idea/ideaComment/{id}
           method: put
           cors: true
           authorizer: authorize
@@ -588,7 +588,7 @@ resources:
             Projection:
               ProjectionType: ALL
 
-    commentTable:
+    ideaCommentTable:
       Type: AWS::DynamoDB::Table
       DeletionPolicy: Retain
       Properties:
@@ -598,8 +598,6 @@ resources:
           - AttributeName: id
             AttributeType: S
           - AttributeName: ideaId
-            AttributeType: S
-          - AttributeName: ownerId
             AttributeType: S
         KeySchema:
           - AttributeName: id
